refactor(brand): Sharpen messaging to focus on search automation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <div class="mb-8">
             <h1 class="text-5xl font-extrabold tracking-tight">Cogmatiq</h1>
-            <p class="text-gray-400 font-semibold tracking-widest mt-2 uppercase text-sm">Search, Automated.</p>
+            <p class="text-gray-400 font-semibold tracking-widest mt-2 uppercase text-sm">Cognition, Automated.</p>
         </div>
 
         <h2 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">
