feat(analytics): Integrate Plausible analytics scripts

--- a/chat.html
+++ b/chat.html
@@ -26,6 +26,15 @@
         .prose ul { list-style-type: disc; margin-left: 1.5rem; }
         .prose strong { font-weight: 800; }
     </style>
+
+    
+    <!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://plausible.io/js/pa-gEeQyOjJtxHzu7XqfX_Tc.js"></script>
+<script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+</script>
+
 </head>
 <body class="flex flex-col h-screen">
 
