--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         .section-padding { padding: 4rem 1.5rem; }
         @media (min-width: 768px) { .section-padding { padding: 6rem 2rem; } }
     </style>
+
+    <!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://plausible.io/js/pa-gEeQyOjJtxHzu7XqfX_Tc.js"></script>
+<script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+</script>
+
 </head>
 <body class="w-full">
 
