--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
 </head>
 <body class="w-full">
 
-    <header class="py-6 px-8">
+       <header class="py-6 px-8 flex justify-between items-center">
         <a href="/" class="flex items-center gap-3 transition-opacity hover:opacity-80">
             <svg class="w-8 h-8 accent-text" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
             <span class="text-2xl font-bold text-white">Cogmatiq</span>
         </a>
+        <div class="flex items-center gap-4">
+            <a href="/login.html" class="text-gray-300 font-medium hover:text-white transition-colors">Log In</a>
+            <a href="/signup.html" class="accent-bg text-white font-bold py-2 px-4 rounded-md transition-colors duration-300">Sign Up</a>
+        </div>
     </header>
 
     <main class="pb-24">
