refactor(homepage): Convert all CTAs to drive user sign-up

--- a/index.html
+++ b/index.html
@@ -41,55 +41,37 @@
             <div class="max-w-4xl mx-auto">
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Stop Searching. Start Knowing.</h1>
                 <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-2xl mx-auto">
-                    Cogmatiq transforms any document into your personal AI expert. Upload a dense PDF and get instant, intelligent answers.
+                    Cogmatiq transforms any document into your personal AI expert. Sign up for free to analyze your first document and get instant, intelligent answers.
                 </p>
-                <button id="upload-button-hero" class="accent-bg text-white font-bold py-4 px-8 rounded-lg text-lg transition-transform transform hover:scale-105 inline-block">
-                    Analyze Your First Document (Free)
-                </button>
+                <a href="/signup.html" class="accent-bg text-white font-bold py-4 px-8 rounded-lg text-lg transition-transform transform hover:scale-105 inline-block">
+                    Get Started for Free
+                </a>
             </div>
         </section>
 
         <section class="section-padding bg-gray-800/20">
             <div class="max-w-4xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">Your Knowledge is Trapped.</h2>
-                <p class="text-gray-300 md:text-lg">
-                    Whether it's a critical research paper, a complex technical manual, or a dense contract, the answers you need are buried. The endless cycle of skimming, searching, and re-reading wastes your most valuable resource: your time.
-                </p>
+                <p class="text-gray-300 md:text-lg">Whether it's a critical research paper, a complex technical manual, or a dense contract, the answers you need are buried. The endless cycle of skimming, searching, and re-reading wastes your most valuable resource: your time.</p>
             </div>
         </section>
-
         <section class="section-padding">
             <div class="max-w-6xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">Master Any Document, Instantly.</h2>
-                <p class="text-gray-300 md:text-lg mb-12 max-w-3xl mx-auto">
-                    Upload any PDF and we engineer it into a private, intelligent AI you can talk to. Ask complex questions in plain language and get precise, source-verified answers in seconds. It’s not a search tool; it's your on-demand expert.
-                </p>
+                <p class="text-gray-300 md:text-lg mb-12 max-w-3xl mx-auto">Upload any PDF and we engineer it into a private, intelligent AI you can talk to. Ask complex questions in plain language and get precise, source-verified answers in seconds. It’s not a search tool; it's your on-demand expert.</p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
-                    <div class="bg-gray-800/30 p-8 rounded-lg">
-                        <svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4.871 15.129c-1.282.973-1.282 2.813 0 3.786.745.564 1.73.885 2.768.885 1.037 0 2.023-.32 2.768-.885 1.282-.973 1.282-2.813 0-3.786a3.87 3.87 0 00-5.536 0zM14.871 15.129c-1.282.973-1.282 2.813 0 3.786.745.564 1.73.885 2.768.885 1.037 0 2.023-.32 2.768-.885 1.282-.973 1.282-2.813 0-3.786a3.87 3.87 0 00-5.536 0zM9.539 4.31a2.27 2.27 0 013.922 0 8.01 8.01 0 014.288 3.322 2.27 2.27 0 011.093 2.502c-.372 1.183-1.63 2.138-3.048 2.138-1.419 0-2.676-.955-3.048-2.138a2.27 2.27 0 011.093-2.502 8.01 8.01 0 01-5.38-5.824zM4.66 8.5c.373-1.183 1.63-2.138 3.048-2.138 1.419 0 2.676.955 3.048 2.138a2.27 2.27 0 01-1.093 2.502 8.01 8.01 0 01-3.907-.001 2.27 2.27 0 01-1.096-2.501z"></path></svg>
-                        <h3 class="text-xl font-bold mb-2">Accelerate Your Learning</h3>
-                        <p class="text-gray-400">Go from zero to expert on any subject. Perfect for students, researchers, and lifelong learners.</p>
-                    </div>
-                    <div class="bg-gray-800/30 p-8 rounded-lg">
-                        <svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"></path></svg>
-                        <h3 class="text-xl font-bold mb-2">Conquer Complexity</h3>
-                        <p class="text-gray-400">Instantly understand intricate manuals and technical guides. Ideal for hobbyists and DIY experts.</p>
-                    </div>
-                    <div class="bg-gray-800/30 p-8 rounded-lg">
-                        <svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M20.25 14.15v4.07a2.25 2.25 0 01-2.25 2.25H5.625a2.25 2.25 0 01-2.25-2.25v-4.07a2.25 2.25 0 01.97-1.833l7.5-4.5a2.25 2.25 0 012.56 0l7.5 4.5a2.25 2.25 0 01.97 1.833z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15.75 9.75v1.875a1.5 1.5 0 01-3 0V9.75m3-3.75l-3.75-2.25L9 6v3.75m3-3.75v3.75m-3 0v3.75"></path></svg>
-                        <h3 class="text-xl font-bold mb-2">Streamline Your Work</h3>
-                        <p class="text-gray-400">Extract key insights from reports and contracts in seconds. A game-changer for freelancers and professionals.</p>
-                    </div>
+                    <div class="bg-gray-800/30 p-8 rounded-lg"><svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4.871 15.129c-1.282.973-1.282 2.813 0 3.786.745.564 1.73.885 2.768.885 1.037 0 2.023-.32 2.768-.885 1.282-.973 1.282-2.813 0-3.786a3.87 3.87 0 00-5.536 0zM14.871 15.129c-1.282.973-1.282 2.813 0 3.786.745.564 1.73.885 2.768.885 1.037 0 2.023-.32 2.768-.885 1.282-.973 1.282-2.813 0-3.786a3.87 3.87 0 00-5.536 0zM9.539 4.31a2.27 2.27 0 013.922 0 8.01 8.01 0 014.288 3.322 2.27 2.27 0 011.093 2.502c-.372 1.183-1.63 2.138-3.048 2.138-1.419 0-2.676-.955-3.048-2.138a2.27 2.27 0 011.093-2.502 8.01 8.01 0 01-5.38-5.824zM4.66 8.5c.373-1.183 1.63-2.138 3.048-2.138 1.419 0 2.676.955 3.048 2.138a2.27 2.27 0 01-1.093 2.502 8.01 8.01 0 01-3.907-.001 2.27 2.27 0 01-1.096-2.501z"></path></svg><h3 class="text-xl font-bold mb-2">Accelerate Your Learning</h3><p class="text-gray-400">Go from zero to expert on any subject. Perfect for students, researchers, and lifelong learners.</p></div>
+                    <div class="bg-gray-800/30 p-8 rounded-lg"><svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"></path></svg><h3 class="text-xl font-bold mb-2">Conquer Complexity</h3><p class="text-gray-400">Instantly understand intricate manuals and technical guides. Ideal for hobbyists and DIY experts.</p></div>
+                    <div class="bg-gray-800/30 p-8 rounded-lg"><svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M20.25 14.15v4.07a2.25 2.25 0 01-2.25 2.25H5.625a2.25 2.25 0 01-2.25-2.25v-4.07a2.25 2.25 0 01.97-1.833l7.5-4.5a2.25 2.25 0 012.56 0l7.5 4.5a2.25 2.25 0 01.97 1.833z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15.75 9.75v1.875a1.5 1.5 0 01-3 0V9.75m3-3.75l-3.75-2.25L9 6v3.75m3-3.75v3.75m-3 0v3.75"></path></svg><h3 class="text-xl font-bold mb-2">Streamline Your Work</h3><p class="text-gray-400">Extract key insights from reports and contracts in seconds. A game-changer for freelancers and professionals.</p></div>
                 </div>
             </div>
         </section>
-        
         <section class="section-padding bg-gray-800/20">
             <div class="max-w-4xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-12">Three Steps to Instant Knowledge.</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-                    <div><h3 class="text-xl font-bold mb-2 accent-text">1. Upload Your Document</h3><p class="text-gray-400">Securely drag and drop or select the PDF you want to master.</p></div>
-                    <div><h3 class="text-xl font-bold mb-2 accent-text">2. We Engineer Your AI</h3><p class="text-gray-400">Our system analyzes and transforms the content into your private cognitive model.</p></div>
+                    <div><h3 class="text-xl font-bold mb-2 accent-text">1. Sign Up for Free</h3><p class="text-gray-400">Create your secure account to get started.</p></div>
+                    <div><h3 class="text-xl font-bold mb-2 accent-text">2. Upload Your Document</h3><p class="text-gray-400">Our system analyzes and transforms the content into your private cognitive model.</p></div>
                     <div><h3 class="text-xl font-bold mb-2 accent-text">3. Ask Anything</h3><p class="text-gray-400">Receive your private chat interface and start getting instant answers.</p></div>
                 </div>
             </div>
@@ -97,12 +79,11 @@
 
         <section id="upload-cta" class="section-padding">
             <div class="max-w-3xl mx-auto text-center">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4">Ready to Stop Searching?</h2>
-                <p class="text-gray-300 md:text-lg mb-8">Drag and drop your PDF to get started. Your first analysis is free.</p>
-                <div id="drop-zone" class="border-2 border-dashed border-gray-600 rounded-lg p-12 text-center cursor-pointer hover:border-accent-text hover:bg-gray-800/20 transition-all">
-                    <p id="drop-zone-text" class="text-gray-400">Drag & Drop Your PDF Here, or Click to Select</p>
-                </div>
-                <p id="error-message" class="text-red-400 mt-4 font-bold hidden"></p>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">Ready to Activate Your Knowledge?</h2>
+                <p class="text-gray-300 md:text-lg mb-8">Sign up for a free account to analyze your first document and see Cogmatiq in action.</p>
+                <a href="/signup.html" class="block border-2 border-dashed border-gray-600 rounded-lg p-12 text-center cursor-pointer hover:border-accent-text hover:bg-gray-800/20 transition-all">
+                    <p class="text-gray-200 font-bold text-xl">Create Your Free Account Now</p>
+                </a>
             </div>
         </section>
     </main>
@@ -114,69 +95,6 @@
         </div>
     </footer>
 
-    <input type="file" id="file-input" class="hidden" accept=".pdf">
-
-    <script>
-        const API_ENDPOINT = 'https://api.cogmatiq.com/upload';
-        const uploadButtonHero = document.getElementById('upload-button-hero');
-        const dropZone = document.getElementById('drop-zone');
-        const fileInput = document.getElementById('file-input');
-        const dropZoneText = document.getElementById('drop-zone-text');
-        const errorMessage = document.getElementById('error-message');
-
-        const selectFile = () => fileInput.click();
-        uploadButtonHero.addEventListener('click', selectFile);
-        dropZone.addEventListener('click', selectFile);
-
-        dropZone.addEventListener('dragover', (e) => { e.preventDefault(); dropZone.classList.add('border-accent-text', 'bg-gray-800/20'); });
-        dropZone.addEventListener('dragleave', () => { dropZone.classList.remove('border-accent-text', 'bg-gray-800/20'); });
-        dropZone.addEventListener('drop', (e) => {
-            e.preventDefault();
-            dropZone.classList.remove('border-accent-text', 'bg-gray-800/20');
-            if (e.dataTransfer.files.length) handleFileUpload(e.dataTransfer.files[0]);
-        });
-        fileInput.addEventListener('change', () => {
-            if (fileInput.files.length) handleFileUpload(fileInput.files[0]);
-        });
-
-        const handleFileUpload = async (file) => {
-            if (file.type !== 'application/pdf') { showError('Only PDF files are accepted.'); return; }
-            if (window.plausible) { window.plausible('Document-Upload-Started'); }
-            showLoadingState();
-            const clientSessionId = crypto.randomUUID();
-            const formData = new FormData();
-            formData.append('file', file);
-            formData.append('client_id', clientSessionId);
-
-            try {
-                const response = await fetch(API_ENDPOINT, { method: 'POST', body: formData });
-                if (!response.ok) {
-                    const errorData = await response.json();
-                    throw new Error(errorData.detail || 'File processing failed.');
-                }
-                window.location.href = `chat.html?session_id=${clientSessionId}`;
-            } catch (error) {
-                showError(error.message);
-                resetDropZone();
-            }
-        };
-
-        const showLoadingState = () => {
-            dropZoneText.textContent = 'Analyzing... This may take a moment.';
-            dropZone.classList.add('animate-pulse');
-            errorMessage.classList.add('hidden');
-        };
-        const showError = (message) => {
-            errorMessage.textContent = `Error: ${message}`;
-            errorMessage.classList.remove('hidden');
-        };
-        const resetDropZone = () => {
-            dropZoneText.textContent = 'Drag & Drop Your PDF Here, or Click to Select';
-            dropZone.classList.remove('animate-pulse');
-            fileInput.value = '';
-        };
-    </script>
-    
     <script>
         const supabaseUrl = 'https://wzekdxvvynpvisbvkiqg.supabase.co';
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind6ZWtkeHZ2eW5wdmlzYnZraXFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA0NzA5NzAsImV4cCI6MjA3NjA0Njk3MH0.CGXF6Txv-OATQdaus08GohMHRyytye59hqaD0Q4BOSU';
@@ -185,14 +103,9 @@
 
         supabaseClient.auth.onAuthStateChange((event, session) => {
             if (session) {
-                authLinksContainer.innerHTML = `
-                    <a href="/dashboard.html" class="accent-bg text-white font-bold py-2 px-4 rounded-md transition-colors duration-300">Go to Dashboard</a>
-                `;
+                authLinksContainer.innerHTML = `<a href="/dashboard.html" class="accent-bg text-white font-bold py-2 px-4 rounded-md transition-colors duration-300">Go to Dashboard</a>`;
             } else {
-                authLinksContainer.innerHTML = `
-                    <a href="/login.html" class="text-gray-300 font-medium hover:text-white transition-colors">Log In</a>
-                    <a href="/signup.html" class="accent-bg text-white font-bold py-2 px-4 rounded-md transition-colors duration-300">Sign Up</a>
-                `;
+                authLinksContainer.innerHTML = `<a href="/login.html" class="text-gray-300 font-medium hover:text-white transition-colors">Log In</a><a href="/signup.html" class="accent-bg text-white font-bold py-2 px-4 rounded-md transition-colors duration-300">Sign Up</a>`;
             }
         });
     </script>
