--- a/account.html
+++ b/account.html
@@ -44,7 +44,7 @@
                     <p id="sub-status" class="font-semibold">Loading...</p>
                 </div>
                 <div>
-                    <button id="manage-billing-button" class="accent-bg text-white font-bold py-3 px-5 rounded-md text-sm transition-colors duration-300 disabled:opacity-50">
+                    <button id="manage-billing-button" class="accent-bg text-white font-bold py-3 px-5 rounded-md text-sm transition-colors duration-300 disabled:opacity-50" disabled>
                         Manage Subscription
                     </button>
                     <p id="message" class="mt-4 text-sm text-red-400"></p>
@@ -72,6 +72,27 @@
                 userToken = session.access_token;
                 userEmailEl.textContent = session.user.email;
                 fetchSubscriptionStatus();
+
+                // --- THIS IS THE FIX ---
+                // We add the event listener HERE, only after we know the user is logged in
+                // and userToken is set.
+                manageBillingButton.addEventListener('click', async () => {
+                    messageEl.textContent = 'Redirecting to billing portal...';
+                    manageBillingButton.disabled = true;
+                    try {
+                        const response = await fetch('https://api.cogmatiq.com/create-customer-portal-session', {
+                            method: 'POST',
+                            headers: { 'Authorization': `Bearer ${userToken}` }
+                        });
+                        if (!response.ok) throw new Error('Could not create portal session.');
+                        const { url } = await response.json();
+                        window.location.href = url;
+                    } catch (err) {
+                        messageEl.textContent = `Error: ${err.message}`;
+                        manageBillingButton.disabled = false;
+                    }
+                });
+
             } else {
                 window.location.href = '/login.html';
             }
@@ -84,27 +105,13 @@
             if (data.is_pro) {
                 subStatusEl.textContent = 'Pro Member';
                 subStatusEl.classList.add('text-green-400');
+                manageBillingButton.disabled = false; // Enable the button for Pro users
             } else {
                 subStatusEl.textContent = 'Free Tier';
                 subStatusEl.classList.add('text-gray-400');
-                manageBillingButton.disabled = true;
+                // Button remains disabled for Free users
             }
         }
-
-        manageBillingButton.addEventListener('click', async () => {
-            messageEl.textContent = 'Redirecting to billing portal...';
-            try {
-                const response = await fetch('https://api.cogmatiq.com/create-customer-portal-session', {
-                    method: 'POST',
-                    headers: { 'Authorization': `Bearer ${userToken}` }
-                });
-                if (!response.ok) throw new Error('Could not create portal session.');
-                const { url } = await response.json();
-                window.location.href = url;
-            } catch (err) {
-                messageEl.textContent = `Error: ${err.message}`;
-            }
-        });
         
         logoutButton.addEventListener('click', async () => { await supabaseClient.auth.signOut(); window.location.href = '/'; });
     </script>
