--- a/dashboard.html
+++ b/dashboard.html
@@ -123,6 +123,16 @@
                 return;
             }
             kbs.forEach(kb => {
+                const docListHTML = kb.documents.length > 0 
+                    ? kb.documents.map(doc => `
+                        <li class="flex justify-between items-center group">
+                            <span>${doc.file_name}</span>
+                            <button onclick="deleteDocument('${doc.id}')" class="text-red-500 opacity-0 group-hover:opacity-100 transition-opacity">
+                                <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm4 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd"></path></svg>
+                            </button>
+                        </li>`).join('') 
+                    : '<li class="text-gray-500">No documents yet.</li>';
+
                 const kbElement = document.createElement('div');
                 kbElement.className = 'bg-gray-800/30 p-6 rounded-lg';
                 kbElement.innerHTML = `
@@ -138,13 +148,28 @@
                     </div>
                     <div class="border-t border-gray-700 pt-4">
                         <h4 class="text-sm font-semibold text-gray-400 mb-2">Documents:</h4>
-                        <ul class="space-y-2 text-sm">
-                            ${kb.documents.length > 0 ? kb.documents.map(doc => `<li>${doc.file_name}</li>`).join('') : '<li class="text-gray-500">No documents yet.</li>'}
-                        </ul>
+                        <ul class="space-y-2 text-sm">${docListHTML}</ul>
                     </div>
                 `;
                 kbList.appendChild(kbElement);
             });
+        }
+        
+        async function deleteDocument(docId) {
+            if (!userToken) return;
+            if (confirm('Are you sure you want to permanently delete this document? This cannot be undone.')) {
+                try {
+                    const response = await fetch(`https://api.cogmatiq.com/documents/${docId}`, {
+                        method: 'DELETE',
+                        headers: { 'Authorization': `Bearer ${userToken}` }
+                    });
+                    if (!response.ok) throw new Error('Failed to delete document.');
+                    
+                    fetchInitialData();
+                } catch (error) {
+                    alert(`Error: ${error.message}`);
+                }
+            }
         }
 
         createKbButton.addEventListener('click', async () => {
@@ -198,8 +223,11 @@
                 progressText.textContent = 'Upload complete. Processing...';
                 if (xhr.status === 200) {
                     fetchInitialData();
+                } else if (xhr.status === 403) {
+                    alert('You have reached your limit. Please upgrade to Pro to upload more documents.');
+                    window.location.href = '/pricing.html';
                 } else {
-                    alert('Upload failed. Please try again.');
+                    alert('Upload failed. Please check the file and try again.');
                 }
                 setTimeout(resetUploadUI, 2000);
             };
